testsuite/tests/overloadedrecflds/should_fail/hasfieldfail02.stderr

hasfieldfail02.hs:10:5: error:
    • No instance for (HasField "foo" T a1)
        arising from a use of ‘getField’
    • In the expression: getField (proxy# :: Proxy# "foo") (MkT id)
      In an equation for ‘x’:
          x = getField (proxy# :: Proxy# "foo") (MkT id)

hasfieldfail02.hs:14:5: error:
    • No instance for (HasField "bar" U a0)
        arising from a use of ‘getField’
    • In the expression: getField (proxy# :: Proxy# "bar") (MkU True)
      In an equation for ‘y’:
          y = getField (proxy# :: Proxy# "bar") (MkU True)
